fixed map height on mobile

--- a/public/css/events/index.scss
+++ b/public/css/events/index.scss
@@ -4,7 +4,7 @@ body {
 #map {
   position: relative;
   width: 100%;
-  height: 50vh;
+  height: 45vh;
 }
 #renderEvents {
   min-height: 100vh;
